fixed pause link being wrong color

--- a/src/main.css
+++ b/src/main.css
@@ -113,7 +113,7 @@ body {
     @apply bg-amber-400 py-4 lg:py-2;
 }
 
-#characterinformation .activecharactercard a {
+#characterinformation .activecharactercardnew a {
     @apply text-amber-900;
 }
 
